small css fix for nav bar alignment

--- a/admin-tool/src/scss/_navigation-bar.scss
+++ b/admin-tool/src/scss/_navigation-bar.scss
@@ -2,7 +2,7 @@
     padding: 1em 0;
     margin-right: 0.5em;
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
 
     .navigation-link {
         padding: 0 1em;
